# Speaky

./: .gitignore  .gitmodules  CMakeLists.txt  Speaky.drawio  TODO.md  class_diagram.puml
acceptance_tests/: register_user.py  send_message.py
acceptance_tests/proto/: build_proto.sh  chat_pb2.py  chat_pb2.pyi  user_connection_pb2.py
acceptance_tests/register_user/: register_user_input_serialized.txt
proto/: CMakeLists.txt  chat.proto  response.proto  user.proto
src/: acceptor_from_gadgets.h  chat.hpp  chat_room.h  input.h  main.cc  main.cxx  observer.h  participant.h  proto_classes_wrapper.h
tests/: CMakeLists.txt  participant_mock.h  register_tests.cc  register_user_tests.cc
tests/deserialize/: CMakeLists.txt  deserialize_tests.cc
tests/package/: CMakeLists.txt  package_tests.cc
tests/register/: CMakeLists.txt  register_tests.cc
tests/register_user/: register_user_tests.cc
tests/send_message/: CMakeLists.txt  send_message_tests.cc
tests/serialize/: CMakeLists.txt  serialize_tests.cc
tests/unregister_user/: CMakeLists.txt  unregister_user_tests.cc
uml/: class_diagram.puml  precedent_accept_from_gadgets.puml
